--- a/noah/Cargo.toml
+++ b/noah/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ark-noah"
 version = "0.0.0"
 license = "CC0-1.0"
-authors = [ "Steven Roose <steven@roose.io>" ]
+authors = ["Steven Roose <steven@roose.io>"]
 edition = "2021"
 
 [lib]
@@ -29,7 +29,7 @@ ciborium.workspace = true
 bitcoin.workspace = true
 bip39.workspace = true
 miniscript.workspace = true
-bdk.workspace = true
+bdk_wallet.workspace = true
 bdk_file_store.workspace = true
 bdk_bitcoind_rpc.workspace = true
 bdk_esplora.workspace = true
