--- a/aspd-rpc-client/Cargo.toml
+++ b/aspd-rpc-client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "arkd-rpc-client"
+name = "aspd-rpc-client"
 version = "0.0.0"
 license = "CC0-1.0"
 authors = [ "Steven Roose <steven@roose.io>" ]
