--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "bark-client"
-version = "0.0.0"
+version = "0.0.0-alpha01"
 license = "CC0-1.0"
 authors = ["Steven Roose <steven@roose.io>"]
 edition = "2021"
+repository = "https://github.com/ark-bitcoin/bark"
 
 [lib]
 name = "bark"
