--- a/sled-utils/Cargo.toml
+++ b/sled-utils/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sled-utils"
 version = "0.0.0"
 edition = "2021"
+repository = "https://github.com/ark-bitcoin/bark"
 
 [dependencies]
 anyhow.workspace = true
