testing: Custom log formatting, be a bit more concise

--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -10,6 +10,8 @@ bitcoin.workspace = true
 bitcoincore-rpc = "0.19.0"
 env_logger.workspace = true
 log.workspace = true
+fern.workspace = true
+chrono.workspace = true
 portpicker = "0.1.1"
 rand.workspace = true
 regex = "1.10.5"
