--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,10 @@ resolver = "2"
 anyhow = { version = "1.0", features = ["backtrace"] }
 lazy_static = "=1.4.0"
 log = "0.4.20"
+fern = "0.6.2"
 env_logger = "=0.10.1"
 clap = { version = "4.4.18", features = [ "derive" ] }
+chrono = "0.4"
 serde = { version = "1", feature = [ "derive" ] }
 serde_json = "1"
 # TODO(stevenroose) consider messagepack or so
