--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 aspd-rpc-client = { path = "../aspd-rpc-client" }
-anyhow.workspace= true
+anyhow.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 bitcoin.workspace = true
 bitcoincore-rpc = "0.19.0"
 env_logger.workspace = true
