--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ lazy_static = "=1.4.0"
 log = "0.4.20"
 fern = "0.6.2"
 env_logger = "=0.10.1"
+hex= "=0.4.3"
 clap = { version = "4.4.18", features = [ "derive" ] }
 chrono = "0.4"
 serde = { version = "1", feature = [ "derive" ] }
