--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -10,6 +10,7 @@ anyhow.workspace= true
 bitcoin.workspace = true
 bitcoincore-rpc = "0.19.0"
 env_logger.workspace = true
+hex.workspace = true
 log.workspace = true
 fern.workspace = true
 chrono.workspace = true
