ark-testing: Lightning make payment
A simple test that sends a lightning payment.
We don't do any ark-integration yet

- Sets developer flags on the lighning-node
- Utility methods to fund lightning nodes and open channels

--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -12,6 +12,7 @@ serde_json.workspace = true
 bitcoin.workspace = true
 bitcoincore-rpc = "0.19.0"
 env_logger.workspace = true
+hex.workspace = true
 log.workspace = true
 fern.workspace = true
 chrono.workspace = true
