--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -20,6 +20,7 @@ tonic-build.workspace = true
 [dependencies]
 ark-lib = { path = "../ark-lib" }
 aspd-rpc-client = { path = "../aspd-rpc-client" }
+bark-cln = {path = "../bark-cln"}
 
 anyhow.workspace = true
 lazy_static.workspace = true
