Add lightning-invoice dependency
This package is a part of the `LDK`-project.
It can be used to parse and construct Bolt-11 invoices

--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -34,6 +34,7 @@ bitcoin.workspace = true
 bip39.workspace = true
 bdk_wallet.workspace = true
 bdk_bitcoind_rpc.workspace = true
+lightning-invoice.workspace = true
 prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
