--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -24,7 +24,8 @@ aspd-rpc-client = { path = "../aspd-rpc-client" }
 anyhow.workspace = true
 lazy_static.workspace = true
 log.workspace = true
-env_logger.workspace = true
+fern.workspace = true
+chrono.workspace = true
 clap.workspace = true
 serde.workspace = true
 serde_json.workspace = true
