--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ resolver = "2"
 anyhow = { version = "1.0", features = ["backtrace"] }
 lazy_static = "=1.4.0"
 log = "0.4.20"
-fern = "0.6.2"
+fern = { version = "0.6.2", features = [ "colored" ] }
 hex= "=0.4.3"
 clap = { version = "4.4.18", features = [ "derive" ] }
 chrono = "0.4"
