--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,8 +47,8 @@ sled = "0.34.7"
 lightning-invoice = { version = "0.32.0-rc1", features = [ "serde" ] }
 
 # async + gRPC stack
-tonic = { version = "0.10", features = [ "tls" ] }
-tonic-build = "0.10"
-prost = "0.12"
+tonic = { version = "0.12.2", features = [ "tls", "tls-roots" ] }
+tonic-build = "0.12.2"
+prost = "0.13.2"
 tokio = { version = "1.35", features = [ "full" ] }
 tokio-stream = { version = "0.1.14", features = [ "sync" ] }
