--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ sled = "0.34.7"
 lightning-invoice = { version = "0.32.0-rc1", features = [ "serde" ] }
 
 # async + gRPC stack
-tonic = { version = "0.12.2", features = [ "tls", "tls-roots" ] }
+tonic = { version = "0.12.2", features = [ "tls", "tls-roots", "gzip" ] }
 tonic-build = "0.12.2"
 prost = "0.13.2"
 tokio = { version = "1.35", features = [ "full" ] }
