--- a/bark-cln/Cargo.toml
+++ b/bark-cln/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 [dependencies]
 ark-lib = { path = "../ark-lib" }
+anyhow.workspace = true
+hex.workspace = true
+futures.workspace = true
+log.workspace = true
+tokio.workspace = true
 tonic.workspace = true
 prost.workspace = true
 
