aspd: Add futures dependency
We do already depend on futures 0.3.30.
It appears multiple times in the depency tree. It is a dependency from
`tonic` and `esplora`.

--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -28,6 +28,7 @@ log.workspace = true
 fern.workspace = true
 chrono.workspace = true
 clap.workspace = true
+futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 ciborium.workspace = true
