--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,4 @@ tonic-build = "0.12.2"
 prost = "0.13.2"
 tokio = { version = "1.35", features = [ "full" ] }
 tokio-stream = { version = "0.1.14", features = [ "sync" ] }
+futures = {version = "0.3.30"}
