bark_cln: Add ark-lib as a dependency
I want to have access to the newly introduced `PaymentStatus`.

--- a/bark-cln/Cargo.toml
+++ b/bark-cln/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ark-lib = { path = "../ark-lib" }
 tonic.workspace = true
 prost.workspace = true
 
