--- a/bark-cln/Cargo.toml
+++ b/bark-cln/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ark-lib = { path = "../ark-lib" }
+bitcoin.workspace = true
 anyhow.workspace = true
 hex.workspace = true
 futures.workspace = true
