bark: Use the streamd FinishBolt11-call
Make a lightning payment and look at the logs.
Progress messages are appeargin

--- a/aspd-rpc-client/Cargo.toml
+++ b/aspd-rpc-client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 repository = "https://github.com/ark-bitcoin/bark"
 
 [dependencies]
-
+ark-lib = { path = "../ark-lib" }
 prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
