Add stream-until crate to provide the StreamUntil type

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ members = [
   "aspd",
   "bark",
   "bark-cln",
-  "sled-utils"
-, "bark-json"]
+  "bark-json",
+
+  "sled-utils",
+  "stream-until",
+]
 
 resolver = "2"
 
