--- a/.woodpecker/images/tests/Dockerfile
+++ b/.woodpecker/images/tests/Dockerfile
@@ -16,18 +16,35 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	librocksdb-dev \
 	protobuf-compiler
 
-ENV BITCOIND_VERSION=27.1 \
-	LIGHTNINGD_VERSION=24.05 \
-	RUST_VERSION=1.77.2 \
-	RUST_BACKTRACE=1 \
+ENV RUST_BACKTRACE=1 \
 	ROCKSDB_LIB_DIR=/usr/lib/x86_64-linux-gnu \
 	PATH=/root/.cargo/bin:${PATH}
 
+# Installs the following components
+# * rustup Rust toolchains:
+#   - 1.77.2
+# * bitcoin core binaries in /bitcoin/<ver>/bin/
+#   - 28.0-rc1
+#   - 27.1
+# * c-lightning binaries in /lightning/<ver>/bin
+#   - 24.05
+
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain none && \
-	rustup toolchain install ${RUST_VERSION} && \
-	wget https://bitcoincore.org/bin/bitcoin-core-${BITCOIND_VERSION}/bitcoin-${BITCOIND_VERSION}-x86_64-linux-gnu.tar.gz && \
-	tar xvzf bitcoin-$BITCOIND_VERSION-x86_64-linux-gnu.tar.gz && \
-	install -m 0755 -o root -g root -t /usr/local/bin bitcoin-${BITCOIND_VERSION}/bin/* && \
-	wget https://github.com/ElementsProject/lightning/releases/download/v${LIGHTNINGD_VERSION}/clightning-v${LIGHTNINGD_VERSION}-Ubuntu-24.04.tar.xz && \
-	tar -xvf clightning-v${LIGHTNINGD_VERSION}-Ubuntu-24.04.tar.xz -C /usr/local --strip-components=2
+	echo "Installing Rust toolchains..." && \
+	rustup toolchain install 1.77.2 && \
+	echo "Installing bitcoin..." && \
+	mkdir /bitcoin && cd /bitcoin && \
+	echo "Installing bitcoin core v28.0-rc1..." && \
+	wget https://bitcoincore.org/bin/bitcoin-core-28.0/test.rc1/bitcoin-28.0rc1-x86_64-linux-gnu.tar.gz && \
+	tar xvzf bitcoin-28.0rc1-x86_64-linux-gnu.tar.gz && mv bitcoin-28.0rc1 28.0-rc1 && \
+	echo "Installing bitcoin core v27.1..." && \
+	wget https://bitcoincore.org/bin/bitcoin-core-27.1/bitcoin-27.1-x86_64-linux-gnu.tar.gz && \
+	tar xvzf bitcoin-27.1-x86_64-linux-gnu.tar.gz && mv bitcoin-27.1 27.1 && \
+	cp /bitcoin/27.1/bin/bitcoin-cli /usr/bin && \
+	echo "Installing lightning..." && \
+	mkdir /lightning && cd /lightning && \
+	echo "Installing c-lightning v24.05..." && \
+	wget https://github.com/ElementsProject/lightning/releases/download/v24.05/clightning-v24.05-Ubuntu-24.04.tar.xz && \
+	mkdir 24.05 && tar -xvf clightning-v24.05-Ubuntu-24.04.tar.xz -C ./24.05 --strip-components=2 && \
+	echo "Done"
 
