ci: Add electrs to Dockerfile

--- a/.woodpecker/images/tests/Dockerfile
+++ b/.woodpecker/images/tests/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 ENV RUST_BACKTRACE=1 \
 	ROCKSDB_LIB_DIR=/usr/lib/x86_64-linux-gnu \
+	RUSTUP_TOOLCHAIN=1.77.2 \
 	PATH=/root/.cargo/bin:${PATH}
 
 # Installs the following components
@@ -28,10 +29,12 @@ ENV RUST_BACKTRACE=1 \
 #   - 27.1
 # * c-lightning binaries in /lightning/<ver>/bin
 #   - 24.05
+# * Blockstream's electrs
+#   - commit 16321d4a7523b98c199d02ce793d13dee79dedfa
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain none && \
 	echo "Installing Rust toolchains..." && \
-	rustup toolchain install 1.77.2 && \
+	rustup toolchain install ${RUSTUP_TOOLCHAIN} && \
 	echo "Installing bitcoin..." && \
 	mkdir /bitcoin && cd /bitcoin && \
 	echo "Installing bitcoin core v28.0-rc1..." && \
@@ -46,5 +49,10 @@ RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --de
 	echo "Installing c-lightning v24.05..." && \
 	wget https://github.com/ElementsProject/lightning/releases/download/v24.05/clightning-v24.05-Ubuntu-24.04.tar.xz && \
 	mkdir 24.05 && tar -xvf clightning-v24.05-Ubuntu-24.04.tar.xz -C ./24.05 --strip-components=2 && \
+	echo "Installing electrs..." && cd /root && \
+	git clone https://github.com/Blockstream/electrs.git --depth 1 && cd electrs && \
+	git fetch --depth 1 origin 16321d4a7523b98c199d02ce793d13dee79dedfa && \
+	cargo install --path . && \
 	echo "Done"
+
 
