--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -37,6 +37,8 @@ bdk_file_store.workspace = true
 bdk_bitcoind_rpc.workspace = true
 bdk_esplora.workspace = true
 lightning-invoice.workspace = true
+lnurl-rs.workspace = true
+bitcoin030.workspace = true
 prost.workspace = true
 tonic.workspace = true
 tokio.workspace = true
