ci: Add integration test with bitcoind v28.0

--- a/.woodpecker/tests.yaml
+++ b/.woodpecker/tests.yaml
@@ -31,6 +31,7 @@ steps:
     image: stevenroose/bark-ci-tests@sha256:173f2b70c1ffd4ece153a971d2f16ca90d5ae8cadbba199c2b2ef962bf5941b8
     commands:
       - bash -c contrib/prechecks.sh rust_no_spaces_for_indent
+
   - name: build
     depends_on: prechecks
     image: stevenroose/bark-ci-tests@sha256:173f2b70c1ffd4ece153a971d2f16ca90d5ae8cadbba199c2b2ef962bf5941b8
@@ -47,7 +48,21 @@ steps:
       - git log --oneline | head -n 1
       - cargo test --workspace --exclude ark-testing --target-dir ./target-unit
 
-  - name: test-integration
+  - name: test-integration-btc28.0
+    depends_on: build
+    image: stevenroose/bark-ci-tests@sha256:173f2b70c1ffd4ece153a971d2f16ca90d5ae8cadbba199c2b2ef962bf5941b8
+    environment:
+      BITCOIND_EXEC: /bitcoin/28.0/bin/bitcoind
+      LIGHTNINGD_EXEC: /lightning/24.05/bin/lightningd
+    commands:
+      - git log --oneline | head -n 1
+      - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
+      - export BARK_EXEC=$CI_WORKSPACE/target/debug/bark
+      - ls -al $${BITCOIND_EXEC}
+      - ls -al $${LIGHTNINGD_EXEC}
+      - TEST_DIRECTORY=./test/btc28 cargo test --package ark-testing
+
+  - name: test-integration-btc27.1
     depends_on: build
     image: stevenroose/bark-ci-tests@sha256:173f2b70c1ffd4ece153a971d2f16ca90d5ae8cadbba199c2b2ef962bf5941b8
     environment:
@@ -59,7 +74,7 @@ steps:
       - export BARK_EXEC=$CI_WORKSPACE/target/debug/bark
       - ls -al $${BITCOIND_EXEC}
       - ls -al $${LIGHTNINGD_EXEC}
-      - cargo test --package ark-testing
+      - TEST_DIRECTORY=./test/btc27 cargo test --package ark-testing
 
   - name: push-github-mirror
     when:
