--- a/ark-lib/Cargo.toml
+++ b/ark-lib/Cargo.toml
@@ -22,3 +22,4 @@ secp256k1-zkp = { git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", 
 
 [dev-dependencies]
 bitcoinconsensus = "0.101.1+0.21-final"
+rand = { version = "*", features = [ "small_rng" ] }
