nix: Use tabs for nix file

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,11 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
+[*.nix]
+indent_style = tab
+indent_size = 2
+trim_trailing_whitespace = true
+
 [Dockerfile]
 indent_style = tab
 trim_trailing_whitespace = true
