bark: Add the rusqlite dependency
This dependency contains bindings for sqlite.
I picked a dependency which is sufficiently light but still has the
features we need.

- `sqlite`: To bare bones, no transaction support
- `rusqlite`: Just great
- `sqlx`: Really awesome but the dependency tree is a bit too large

--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -40,6 +40,7 @@ lightning-invoice.workspace = true
 lnurl-rs.workspace = true
 bitcoin030.workspace = true
 prost.workspace = true
+rusqlite.workspace = true
 tonic.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
