--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,9 @@ lnurl-rs = "0.6.0"
 # this one is a workaround for a bug in lnurl-rs
 bitcoin030 = { package = "bitcoin", version = "0.30.2", features = [ "std" ] }
 
+# database dependencies
 sled = "0.34.7"
+rusqlite =  "0.32.1"
 
 # LDK-dependencies
 lightning-invoice = { version = "0.32.0-rc1", features = [ "std", "serde" ] }
