--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 slow_test = []
 
 [dependencies]
+ark-lib = { path = "../ark-lib" }
 aspd-rpc-client = { path = "../aspd-rpc-client" }
 bark-cln = { path = "../bark-cln"}
 bark-json = { path = "../bark-json"}
