Organize dependencies better
Group exported deps and export key external crates.
- bitcoin
- lnurl
- lightning-invoice

Also put db deps into own crate and not workspace.

Not making decision yet on exporting log/serde.

--- a/aspd-rpc-client/Cargo.toml
+++ b/aspd-rpc-client/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 repository = "https://github.com/ark-bitcoin/bark"
 
 [dependencies]
+# OWN
 ark-lib = { path = "../ark-lib" }
-prost.workspace = true
+
+# EXPORTED
 tonic.workspace = true
+
+# INTERNAL
+prost.workspace = true
 tokio.workspace = true
