--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,21 +15,40 @@ resolver = "2"
 
 # TODO(stevenroose) at some point probably move these inline
 [workspace.dependencies]
-# Rust stack
-anyhow = { version = "1.0", features = ["backtrace"] }
-lazy_static = "=1.4.0"
+
+#
+# * EXPORTED (ECOSYSTEM)
+
+bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
+lightning-invoice = { version = "0.32.0-rc1", features = [ "std", "serde" ] }
+lnurl-rs = "0.6.0"
+# this one is a workaround for a bug in lnurl-rs
+bitcoin030 = { package = "bitcoin", version = "0.30.2", features = [ "std" ] }
+anyhow = { version = "1.0", features = [ "backtrace" ] }
 log = "0.4.20"
+serde = { version = "1", feature = [ "derive" ] }
+# grpc clients
+tonic = { version = "0.12.2", features = [ "tls", "tls-roots", "gzip" ] }
+
+
+#
+# * INTERNAL
+
+# rust stack
+lazy_static = "=1.4.0"
 fern = { version = "0.6.2", features = [ "colored" ] }
-hex= "=0.4.3"
+hex = "=0.4.3"
 clap = { version = "4.4.18", features = [ "derive" ] }
 chrono = "0.4"
-serde = { version = "1", feature = [ "derive" ] }
 serde_json = "1"
-# TODO(stevenroose) consider messagepack or so
 ciborium = "0.2.1"
-
-# bitcoin stack
-bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
+# async + gRPC stack
+tonic-build = "0.12.2"
+prost = "0.13.2"
+tokio = { version = "1.35", features = [ "full" ] }
+tokio-stream = { version = "0.1.14", features = [ "sync" ] }
+futures = {version = "0.3.30"}
+# bitcoin
 bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
 miniscript = "12.2"
 rand = { version = "0.8.5", features = [ "std", "std_rng" ] }
@@ -37,23 +56,7 @@ bdk_wallet = "1.0.0-beta.5"
 bdk_esplora = "0.19.0"
 bdk_bitcoind_rpc = "0.16.0"
 bdk_file_store = "0.17.0"
-lnurl-rs = "0.6.0"
-# this one is a workaround for a bug in lnurl-rs
-bitcoin030 = { package = "bitcoin", version = "0.30.2", features = [ "std" ] }
 
-# database dependencies
-rusqlite =  "0.32.1"
-
-# LDK-dependencies
-lightning-invoice = { version = "0.32.0-rc1", features = [ "std", "serde" ] }
-
-# async + gRPC stack
-tonic = { version = "0.12.2", features = [ "tls", "tls-roots", "gzip" ] }
-tonic-build = "0.12.2"
-prost = "0.13.2"
-tokio = { version = "1.35", features = [ "full" ] }
-tokio-stream = { version = "0.1.14", features = [ "sync" ] }
-futures = {version = "0.3.30"}
 
 [profile.release]
 debug = true
