--- a/ark-lib/Cargo.toml
+++ b/ark-lib/Cargo.toml
@@ -10,15 +10,20 @@ repository = "https://github.com/ark-bitcoin/bark"
 name = "ark"
 
 [dependencies]
-lazy_static.workspace = true
-serde.workspace = true
-ciborium.workspace = true
+
+# * EXPORTED DEPS
 bitcoin.workspace = true
+serde.workspace = true
+
+# * INTERNAL DEPS
+lazy_static.workspace = true
+ciborium.workspace = true
 rand.workspace = true
 lightning-invoice.workspace = true
 
 # using sanket's branch for musig2 code
 secp256k1-zkp = { git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d", features = [ "serde" ] }
+
 
 [dev-dependencies]
 bitcoinconsensus = "0.101.1+0.21-final"
