--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
 miniscript = "12.2"
 rand = { version = "0.8.5", features = [ "std", "std_rng" ] }
 bdk_wallet = "1.0.0-beta.5"
-bdk_esplora = "0.19.0"
+bdk_esplora = { version = "0.19.0", features = [ "std", "async-https-rustls" ], default-features = false }
 bdk_bitcoind_rpc = "0.16.0"
 bdk_file_store = "0.17.0"
 
