--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ lnurl-rs = "0.6.0"
 bitcoin030 = { package = "bitcoin", version = "0.30.2", features = [ "std" ] }
 anyhow = { version = "1.0", features = [ "backtrace" ] }
 log = "0.4.20"
-serde = { version = "1", feature = [ "derive" ] }
+serde = { version = "1" }
 # grpc clients
 tonic = { version = "0.12.2", features = [ "tls", "tls-roots", "gzip" ] }
 
