ci: Update build step depends in attempt to run build sooner

--- a/.woodpecker/tests.yaml
+++ b/.woodpecker/tests.yaml
@@ -42,7 +42,7 @@ steps:
       - ls -al ./target/debug
 
   - name: test-unit
-    depends_on: merge-master
+    depends_on: prechecks
     image: stevenroose/bark-ci-tests@sha256:173f2b70c1ffd4ece153a971d2f16ca90d5ae8cadbba199c2b2ef962bf5941b8
     commands:
       - git log --oneline | head -n 1
