--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "ark-testing",
   "aspd-rpc-client",
   "aspd",
+  "aspd-log",
   "bark",
   "bark-cln",
   "bark-json",
@@ -26,7 +27,7 @@ lnurl-rs = { version = "0.8.0", git = "https://github.com/benthecarman/lnurl-rs.
 # this one is a workaround for a bug in lnurl-rs
 bitcoin030 = { package = "bitcoin", version = "0.30.2", features = [ "std" ] }
 anyhow = { version = "1.0", features = [ "backtrace" ] }
-log = "0.4.20"
+log = { version = "0.4.22", features = [ "kv", "kv_serde" ] }
 serde = { version = "1" }
 # grpc clients
 tonic = { version = "0.12.2", features = [ "tls", "tls-roots", "gzip" ] }
@@ -40,8 +41,8 @@ lazy_static = "=1.4.0"
 fern = { version = "0.6.2", features = [ "colored" ] }
 hex = "=0.4.3"
 clap = { version = "4.4.18", features = [ "derive" ] }
-chrono = "0.4"
-serde_json = "1"
+chrono = { version = "0.4", features = [ "serde" ] }
+serde_json = { version = "1", features = [ "raw_value" ] }
 ciborium = "0.2.1"
 # async + gRPC stack
 tonic-build = "0.12.2"
@@ -61,3 +62,6 @@ bdk_file_store = "0.17.0"
 
 [profile.release]
 debug = true
+
+[patch.crates-io]
+log = { git = "https://github.com/stevenroose/log.git", branch = "borrowed-str-lifetime" }
