--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -8,6 +8,7 @@ slow_test = []
 
 [dependencies]
 ark-lib = { path = "../ark-lib" }
+aspd-log = { path = "../aspd-log" }
 aspd-rpc-client = { path = "../aspd-rpc-client" }
 bark-cln = { path = "../bark-cln"}
 bark-json = { path = "../bark-json"}
