--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,4 +63,6 @@ bdk_bitcoind_rpc = "0.16.0"
 debug = true
 
 [patch.crates-io]
+# TODO(stevenroose) remove once this PR is released, probably 0.4.23
+# https://github.com/rust-lang/log/pull/643
 log = { git = "https://github.com/stevenroose/log.git", branch = "borrowed-str-lifetime" }
