--- a/aspd-log/Cargo.toml
+++ b/aspd-log/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# OWN
+ark-lib = { path = "../ark-lib" }
+
 log.workspace = true
 serde.workspace = true
 serde_json.workspace = true
