testing: Don't always generate to wallet as this is slow
Instead, generate a few blocks to the wallet and then generate a 100
blocks to a random address to confirm the first blocks.

--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -20,6 +20,7 @@ which = "6.0.1"
 async-trait = "0.1.83"
 
 anyhow.workspace = true
+lazy_static.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 bitcoin.workspace = true
