--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -17,6 +17,7 @@ bark-client = { path = "../bark" }
 bitcoincore-rpc = "0.19.0"
 portpicker = "0.1.1"
 regex = "1.10.5"
+users = "0.11"
 which = "6.0.1"
 async-trait = "0.1.83"
 
