--- a/ark-lib/Cargo.toml
+++ b/ark-lib/Cargo.toml
@@ -26,5 +26,5 @@ secp256k1-zkp = { git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", 
 
 
 [dev-dependencies]
-bitcoinconsensus = "0.101.1+0.21-final"
+bitcoinconsensus = "0.106.0+26.0"
 rand = { version = "*", features = [ "small_rng" ] }
