--- a/aspd-log/Cargo.toml
+++ b/aspd-log/Cargo.toml
@@ -14,5 +14,5 @@ serde.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
 
+bdk_wallet.workspace = true
 bitcoin.workspace = true
-
