bark: Hard pin the home crate
The `home`-crate is maintained as part of the cargo project. It is only
"intended" to be used by the cargo project and they are pretty clear
that they don't care about upstream dependencies.

By pinning to exactly version 0.5.9 we ensure breaking changes can't
affect us.

--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -55,7 +55,7 @@ tonic.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
 
-home = { version = "0.5.9", optional = true }
+home = { version = "=0.5.9", optional = true }
 
 [dev-dependencies]
 rand.workspace = true
