--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,9 +54,9 @@ futures = {version = "0.3.30"}
 bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
 miniscript = "12.2"
 rand = { version = "0.8.5", features = [ "std", "std_rng" ] }
-bdk_wallet = "1.0.0-beta.5"
-bdk_esplora = { version = "0.19.0", features = [ "std", "async-https-rustls" ], default-features = false }
-bdk_bitcoind_rpc = "0.16.0"
+bdk_wallet = "1.0.0"
+bdk_esplora = { version = "0.20.1", features = [ "std", "async-https-rustls", "tokio" ], default-features = false }
+bdk_bitcoind_rpc = "0.17.1"
 
 
 [profile.release]
