rpc: Unify rpc structs between client and server

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
-aspd-rpc-client/src/arkd.rs linguist-generated=true
-aspd-rpc-client/src/aspd.rs linguist-generated=true
-aspd/src/rpc/aspd.rs linguist-generated=true
+aspd-rpc/src/rpc/aspd.rs linguist-generated=true
 bark-cln/src/grpc/cln.rs linguist-generated=true
