--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -9,7 +9,7 @@ slow_test = []
 [dependencies]
 ark-lib = { path = "../ark-lib" }
 aspd-log = { path = "../aspd-log" }
-aspd-rpc-client = { path = "../aspd-rpc-client" }
+aspd-rpc = { path = "../aspd-rpc" }
 bark-cln = { path = "../bark-cln"}
 bark-json = { path = "../bark-json"}
 bark-client = { path = "../bark" } 
