--- a/aspd-rpc/Cargo.toml
+++ b/aspd-rpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "aspd-rpc-client"
+name = "aspd-rpc"
 version = "0.0.0-alpha01"
 license = "CC0-1.0"
 authors = [ "Steven Roose <steven@roose.io>" ]
@@ -16,3 +16,6 @@ tonic.workspace = true
 # INTERNAL
 prost.workspace = true
 tokio.workspace = true
+
+[build-dependencies]
+tonic-build.workspace= true
