--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -24,7 +24,7 @@ required-features = ["cli"]
 # OWN
 ark-lib = { path = "../ark-lib" }
 bark-json = { path = "../bark-json" }
-aspd-rpc-client = { path = "../aspd-rpc-client" }
+aspd-rpc = { path = "../aspd-rpc" }
 
 # EXPORTED
 bitcoin.workspace = true
