--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ tonic = { version = "0.12.2", features = [ "tls", "tls-roots", "gzip" ] }
 lazy_static = "=1.4.0"
 fern = { version = "0.6.2", features = [ "colored" ] }
 hex = "=0.4.3"
-clap = { version = "4.4.18", features = [ "derive" ] }
+clap = { version = "4.4.18", features = [ "derive", "env" ] }
 chrono = { version = "0.4", features = [ "serde" ] }
 serde_json = { version = "1", features = [ "raw_value" ] }
 ciborium = "0.2.1"
