--- a/aspd-rpc/Cargo.toml
+++ b/aspd-rpc/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 repository = "https://github.com/ark-bitcoin/bark"
 
 [features]
-server-rpc = []
+server = []
 
 [dependencies]
 # OWN
