--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-aspd-rpc/src/rpc/aspd.rs linguist-generated=true
+aspd-rpc/src/aspd.rs linguist-generated=true
 bark-cln/src/grpc/cln.rs linguist-generated=true
