--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -27,6 +27,7 @@ lazy_static.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 bitcoin.workspace = true
+bdk_esplora.workspace = true
 hex.workspace = true
 log.workspace = true
 fern.workspace = true
